[package]
name = "rnltk"
version = "0.1.0"
edition = "2021"
include = ["/src", "data/", "test-data/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
regex = "1.6.0"
num = "0.4.0"
ndarray = "0.15.6"
smartcore = "0.2.1"
