[package]
name = "rnltk"
version = "0.1.0"
authors = ["Michael Long <michael.d.long88@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Natural Language Toolkit for Rust"
keywords = ["nlp", "language", "stemming", "sentiment"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
regex = "1.6.0"
