[package]
name = "rnltk"
version = "0.1.5"
authors = ["Michael Long <michael.d.long88@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Natural Language Toolkit for Rust"
keywords = ["nlp", "language", "stemming", "sentiment"]
readme = "README.md"
documentation = "https://docs.rs/rnltk"
repository = "https://github.com/michael-long88/rnltk/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
regex = "1.6.0"
csv = "1.1.6"
thiserror = "1.0.37"
